# mcp

./: .env  README.md  conversations.db  ocr_service.py  ollama_test.py  requirements.txt  speech_service.py
db-agent/mcp/: README.md  conversations.db  debug_stream.py  demo_page.html  init_test_db.py  main.py  pyproject.toml  run_api.py  run_server.py  test_conversations.db
db-agent/mcp/docs/: conversation_improvements_summary.md  memory_usage.md  语音识别功能集成指南.md
db-agent/mcp/frontend/: package-lock.json
db-agent/mcp/frontend/src/: App.tsx
db-agent/mcp/frontend/src/chat/: ChatInterface.tsx
db-agent/mcp/frontend/src/components/: MessageList.tsx  MessageRenderer.tsx
db-agent/mcp/frontend/src/hooks/: useConversation.test.ts  useConversation.ts  useConversationManager.ts  useSpeechRecognition.ts
db-agent/mcp/md/: 会话ID和消息追加修复.md  修复AgentState错误.md  切换到生产模式.md  前后端集成说明.md  后端回答显示修复.md  图片OCR识别功能使用指南.md  增强消息渲染功能.md  系统完成度计划.md  语音识别功能使用指南.md  重构测试Hook.md
db-agent/mcp/src/: __init__.py  main.py  memory.db  server.py
db-agent/mcp/src/agent_mcp.egg-info/: PKG-INFO  SOURCES.txt
db-agent/mcp/src/api/: __init__.py  complete_api.py  conversation_api.py  database_api.py  demo_api.py  session_api.py  tool_api.py
db-agent/mcp/src/core/: __init__.py  conversation_coordinator.py  conversation_manager.py  guard.py  memory.py  react_engine.py  schemas.py  tool_registry.py
db-agent/mcp/src/frontend/: README.md  __init__.py  conversation_api.py
db-agent/mcp/src/tools/: README.md  __init__.py  base.py
db-agent/mcp/src/tools/charts/: __init__.py  provider.py
(+51 files in other folders)
