[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-mcp"
version = "0.2.0"
description = "Modular MCP Agent with Database, File, Web, and Visualization Tools"
authors = [{name = "Agent MCP Team", email = "team@agent-mcp.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "mcp>=1.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "sqlalchemy>=2.0.0",
    "pymysql>=1.1.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "tenacity>=8.0.0",
    "httpx>=0.25.0",
    "openai>=1.0.0",
    "requests>=2.31.0",
    "aiofiles>=23.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
agent-mcp-server = "agent_mcp.server:main"
agent-mcp-client = "agent_mcp.client:main"
agent-mcp-api = "agent_mcp.api:app"